Improved Performance - added robots crawler support , 404 page , meta descriptions , img alt prop & lighthouse report

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="A real-time collaborative tool for seamless teamwork. Connect, brainstorm, and create together with interactive features designed to boost productivity and communication."
+    />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -10,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <title>Online Collaborative Board</title>
+    <title>Real-time Collaborative Board</title>
   </head>
   <body>
     <div id="root"></div>
